scss/pattern-lib.scss
@import 'vanilla-framework/scss/vanilla';
@include vanilla;

// Temp styling for Pattern Lib MVP
// This should be superceded by a docs theme

$sidebar-width: 12em;

.grid_outline {

  [class^='col-'] {

    span {
      display: block;
      outline: 1px solid $color-mid-grey;
      margin-bottom: 1rem;
      padding: 1rem;
    }
  }
}

.pl-header {
  width: 100%;
  background: $color-cool-grey;
  padding: 1rem;
  display: flex;

  &__link {
    color: $color-light;
    border-bottom: 0;

    &,
    &:hover {
      text-decoration: none;
    }
  }
}

.pl {

  margin: 0;

  &__heading {
    text-transform: capitalize;
    margin: 0 0 1rem;
    border-bottom: 1px solid $color-mid-grey;
  }

  &__nav {
    margin-left: auto;
  }

  &__badges {

    margin-bottom: 1rem;

    a {
      border-bottom: 0;
    }
  }

  &__demo {
    display: block;
    background: $color-light-grey;
    width: 100%;
    padding: .5rem;
  }

  .topnav-list {
    margin: 0;
    padding: 0;
    list-style: none;
    padding-right: 2rem;

    &__item {
      display: inline-block;
      padding-left: 2rem;
      margin-bottom: 0;
    }

    &__link {
      color: $color-light;
      text-decoration: none;
      border-bottom: 0;
    }
  }

  &,
  &__container {
    display: flex;
    flex-direction: column;
  }

  &__content {
    max-width: 960px;
    line-height: 1.5;
  }

  &__content,
  &__sidenav {
    padding: 1rem;
  }

  &__sidenav {
    order: -1;
    background: $color-light-grey;
  }

  &__relative {
    position: relative;
  }

  .sidenav-list {
    margin: 0;
    padding: 0;
    list-style: none;

    &__item {
      margin-bottom: 0;
    }

    &__link {
      display: inline-block;
      margin-left: .5rem;
      font-size: .875rem;
      text-decoration: none;
      margin-bottom: 0;
      border-bottom: 0;
    }
  }

  &__footer {
    background: $color-light-grey;
    padding: 2rem;
    font-size: .875rem;
    color: darken($color-light-grey, 25%);

    .inline-list {
      list-style: none;
      padding: 1rem 0 0;
      margin: 0;
    }

    .inline-list__item {
      display: inline;
      font-size: .875rem;
      padding: 1rem 0 0;
    }

    .inline-list__item:after {
      content: '•';
      color: $color-cool-grey;
      font-size: 1em;
      padding: 0 .25rem;
    }

    .inline-list__item:last-child::after {
      content: '';
    }
  }

  @media (min-width: 768px) {

    .pl__container {
      flex-direction: row;
      flex: 1;
      min-height: calc(100vh - 100px);
    }

    .pl__content {
      flex: 1;
      width: calc(100% - #{$sidebar-width});
    }

    .pl__sidenav {
      flex: 0 0 $sidebar-width;
    }

    .pl__footer {
      padding-left: calc(#{$sidebar-width} + 2.5rem);
    }
  }
}

